[gd_scene load_steps=4 format=3 uid="uid://brimy02fec1lo"]

[ext_resource type="Texture2D" uid="uid://dmb08d2q1wgfb" path="res://assets/radarTeste.png" id="1_cnrhh"]
[ext_resource type="Script" path="res://scenes/entities/ship/radar/radar.gd" id="1_f438s"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_flok3"]

[node name="Radar" type="Area2D"]
modulate = Color(0.87946, 0.119981, 0, 1)
material = SubResource("CanvasItemMaterial_flok3")
rotation = -1.5708
collision_layer = 0
script = ExtResource("1_f438s")
metadata/_edit_group_ = true

[node name="RadarColision" type="CollisionPolygon2D" parent="."]
modulate = Color(0.760586, 0.188894, 0.168392, 1)
position = Vector2(-21, -7.60198e-05)
polygon = PackedVector2Array(22, 7.96398e-05, 279, -18.999, 320, 0.0011584, 278, 20.001, 46.547, 1.9179)

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.490196)
z_index = -1
position = Vector2(136, 0.000492319)
rotation = 1.5708
scale = Vector2(1.39014, 10.3414)
texture = ExtResource("1_cnrhh")

[node name="DisabledRadar" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="DisabledRadar" to="." method="_on_disabled_radar_timeout"]
